# browser-engineering

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/browser_engineering/: __init__.py  __main__.py  browser.py
tests/: test_sample.py
