[project]
name = "browser-engineering"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shinya Fujino", email = "shf0811@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"browser-engineering" = "browser_engineering:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/browser_engineering"]
